fix alignment in footer

--- a/css/index.css
+++ b/css/index.css
@@ -81,6 +81,7 @@ nav a {
 }
 
 #footer p {
+  text-align: left;
   margin-bottom: .5em;
 }
 
